--- a/frontend_orbital/src/components/button.css
+++ b/frontend_orbital/src/components/button.css
@@ -41,3 +41,17 @@
     color: #242424;
     transition: 250ms;
   }
+  
+  .btn--mobile {
+    text-align: center;
+    border-radius: 4px;
+    width: 80%;
+    text-decoration: none;
+    font-size: 1.5rem;
+    background-color: transparent;
+    color: #fff;
+    padding: 14px 20px;
+    border: 1px solid #fff;
+    transition: all 0.3s ease-out;
+  }
+  
