--- a/frontend_orbital/src/components/navbar.css
+++ b/frontend_orbital/src/components/navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background: rgb(36, 9, 9);;
+  background: linear-gradient(90deg, rgb(36, 9,9) 0%, rgb(26, 23, 23) 100%);
   height: 80px;
   display: flex;
   justify-content: center;
@@ -12,23 +12,15 @@
 
 .navbar-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
   height: 80px;
-}
-
-.container {
-  z-index: 1;
-  width: 100%;
-  max-width: 1300px;
-  margin-right: auto;
-  margin-left: auto;
-  padding-right: 50px;
-  padding-left: 50px;
 }
 
 .navbar-logo {
   color: #fff;
   justify-self: start;
+  margin-left: 20px;
   cursor: pointer;
   text-decoration: none;
   font-size: 2rem;
@@ -36,26 +28,24 @@
   align-items: center;
 }
 
-.navbar-icon {
-  margin-right: 0.5rem;
+.fa-typo3 {
+  margin-left: 0.5rem;
+  font-size: 1.8rem;
 }
 
 .nav-menu {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  grid-gap: 10px;
   list-style: none;
   text-align: center;
+  width: 60vw;
   justify-content: end;
+  margin-right: 2rem;
 }
 
 .nav-item {
   height: 80px;
-  border-bottom: 2px solid transparent;
-}
-
-.nav-item:hover {
-  border-bottom: 2px solid #fff;
 }
 
 .nav-links {
@@ -67,8 +57,23 @@
   height: 100%;
 }
 
+.nav-links:hover {
+  border-bottom: 4px solid #fff;
+  transition: all 0.2s ease-out;
+}
+
 .fa-bars {
   color: #fff;
+}
+
+.nav-links-mobile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  padding: 8px 16px;
+  height: 100%;
+  width: 100%;
 }
 
 .menu-icon {
@@ -93,10 +98,10 @@
   }
 
   .nav-menu.active {
-    background: rgb(36, 9, 9);
+    background: #242222;
     left: 0;
-    opacity: 0.9;
-    transition: all 0.6s ease;
+    opacity: 1;
+    transition: all 0.5s ease;
     z-index: 1;
   }
 
@@ -108,17 +113,9 @@
   }
 
   .nav-links:hover {
-    color: #fff;
-    transform: scale(1.2);
-    transition: all 0.3s ease;
-  }
-
-  .nav-item:hover {
-    border: none;
-  }
-
-  .nav-item {
-    width: 100%;
+    background-color: #fff;
+    color: #242424;
+    border-radius: 0;
   }
 
   .navbar-logo {
@@ -143,11 +140,18 @@
     font-size: 2rem;
   }
 
-  .nav-btn {
+  .nav-links-mobile {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 120px;
+    font-size: 1.2rem;
+  }
+
+  .nav-links-mobile:hover {
+    background: #fff;
+    color: #242424;
+    transition: 250ms;
   }
 }
