--- a/frontend_orbital/src/components/card.css
+++ b/frontend_orbital/src/components/card.css
@@ -83,7 +83,7 @@
     max-width: 100%;
     height: 100%;
     max-height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     transition: all 0.2s linear;
   }
   
