--- a/frontend_orbital/src/components/navbar.css
+++ b/frontend_orbital/src/components/navbar.css
@@ -4,17 +4,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.2rem;
+  font-size: 1rem;
   position: sticky;
   top: 0;
   z-index: 999;
+  margin-right: 0;
 }
 
 .navbar-container {
   display: flex;
   justify-content: center;
-  align-items: center;
   height: 80px;
+  margin-right:0;
 }
 
 .navbar-logo {
@@ -23,25 +24,28 @@
   margin-left: 20px;
   cursor: pointer;
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 1.5rem;
   display: flex;
   align-items: center;
+  float : left;
 }
 
 .fa-typo3 {
   margin-left: 0.5rem;
-  font-size: 1.8rem;
+  font-size: 1.2
+  rem;
 }
 
 .nav-menu {
   display: grid;
-  grid-template-columns: repeat(4, auto);
+  grid-template-columns: repeat(5, auto);
   grid-gap: 10px;
   list-style: none;
   text-align: center;
   width: 60vw;
   justify-content: end;
-  margin-right: 2rem;
+  margin-right: 0rem;
+  float:right;
 }
 
 .nav-item {
@@ -107,7 +111,7 @@
 
   .nav-links {
     text-align: center;
-    padding: 2rem;
+    padding: 1.5rem;
     width: 100%;
     display: table;
   }
@@ -131,13 +135,13 @@
     top: 0;
     right: 0;
     transform: translate(-100%, 60%);
-    font-size: 1.8rem;
+    font-size: 1.3rem;
     cursor: pointer;
   }
 
   .fa-times {
     color: #fff;
-    font-size: 2rem;
+    font-size: 1rem;
   }
 
   .nav-links-mobile {
@@ -145,13 +149,15 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 120px;
-    font-size: 1.2rem;
+    height: 100px;
+    padding:1.5rem;
+    font-size:1rem;
   }
 
   .nav-links-mobile:hover {
     background: #fff;
     color: #242424;
     transition: 250ms;
+    border-radius: 0
   }
 }
