--- a/frontend_orbital/src/components/navbar.css
+++ b/frontend_orbital/src/components/navbar.css
@@ -8,32 +8,30 @@
   position: sticky;
   top: 0;
   z-index: 999;
-  margin-right: 0;
+  margin: 0;
+  padding:0;
 }
 
 .navbar-container {
   display: flex;
   justify-content: center;
   height: 80px;
-  margin-right:0;
 }
 
 .navbar-logo {
   color: #fff;
-  justify-self: start;
-  margin-left: 20px;
   cursor: pointer;
   text-decoration: none;
   font-size: 1.5rem;
   display: flex;
   align-items: center;
   float : left;
+  justify-self: flex-start;
 }
 
 .fa-typo3 {
   margin-left: 0.5rem;
-  font-size: 1.2
-  rem;
+  font-size: 1.2rem;
 }
 
 .nav-menu {
@@ -59,6 +57,7 @@
   text-decoration: none;
   padding: 0.5rem 1rem;
   height: 100%;
+  justify-content: space-evenly;
 }
 
 .nav-links:hover {
@@ -83,6 +82,9 @@
 .menu-icon {
   display: none;
 }
+
+
+
 
 @media screen and (max-width: 960px) {
   .NavbarItems {
@@ -151,13 +153,14 @@
     width: 100%;
     height: 100px;
     padding:1.5rem;
-    font-size:1rem;
+    font-size:0.8rem;
   }
 
   .nav-links-mobile:hover {
     background: #fff;
     color: #242424;
     transition: 250ms;
-    border-radius: 0
+    border-radius: 0;
   }
+
 }
