--- a/frontend_orbital/src/components/intro-section.css
+++ b/frontend_orbital/src/components/intro-section.css
@@ -1,9 +1,11 @@
 video {
-  object-fit: cover;
+  object-fit:cover ;
   width: 100%;
   height: 100%;
   position: fixed;
   z-index: -1;
+  overflow: hidden;
+
 }
 
 .hero-container {
